# notifyAPI

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
notifyAPI/: motion.py
notify_api/: notifier.py
tests/: test_motion.py  test_telegram.py
