[tool.poetry]
name = "notifyapi"
version = "0.1.0"
description = ""
authors = ["Tim Mees <tim.mees83@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"



[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
black = "^22.10.0"
isort = "^5.10.1"
bandit = "^1.7.4"
safety = "^2.3.1"
pylint = "^2.15.5"
pytest = "^7.2.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
