[tool.poetry]
name = "notify_api"
version = "0.2.3"
description = ""
authors = ["Tim Mees <tim.mees83@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = ">=2.2.2"
timtools = {git = "https://github.com/tim83/timtools"}
sshtools = {git = "https://github.com/tim83/sshtools"}



[tool.poetry.dev-dependencies]
flake8 = ">=5.0.4"
flake8-bugbear = ">=22.10.27"
flake8-docstrings = ">=1.6.0"
darglint = ">=1.8.1"
black = ">=22.10.0"
isort = ">=5.10.1"
pylint = ">=2.15.5"
pytest = ">=7.2.0"
pre-commit = ">=2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"