[tool.poetry]
name = "notify_api"
version = "0.3.0"
description = ""
authors = ["Tim Mees <tim.mees83@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = ">=2.2.2"
timtools = {git = "https://github.com/tim83/timtools"}
sshtools = {git = "https://github.com/tim83/sshtools"}



[tool.poetry.dev-dependencies]
black = ">=22.10.0"
pylint = ">=2.15.5"
pytest = ">=7.2.0"
pre-commit = ">=2.20.0"
toml = ">=0.10.2"
ruff = ">=0.0.256"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.ruff]
line-length = 88
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Flake8-bugbear
    "B"
]
